@@ -1,6 +1,7 @@
 plugins {
     id "jacoco"
     id "java"
+    id 'java-test-fixtures'
     id "com.diffplug.spotless" version "6.25.0" apply false
 }
 
@@ -13,6 +14,7 @@ repositories {
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'java-test-fixtures'
     apply plugin: 'jacoco'
     apply plugin: "com.diffplug.spotless"
 
@@ -25,7 +27,7 @@ subprojects {
 
     spotless {
         java {
-            googleJavaFormat('1.15.0')
+            googleJavaFormat('1.22.0')
         }
     }
     compileJava.dependsOn 'spotlessApply'
@@ -47,25 +49,51 @@ subprojects {
         implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.1'
         implementation 'com.graphql-java:graphql-java:21.1'
         implementation 'com.graphql-java:graphql-java-extended-scalars:20.2'
-        implementation 'com.sparkjava:spark-core:2.9.4'
-        implementation 'org.pac4j:pac4j-core:5.7.5'
-        implementation 'org.pac4j:pac4j-oidc:5.7.5'
-        implementation 'org.pac4j:pac4j-http:5.7.5'
-        implementation 'org.pac4j:spark-pac4j:5.0.1'
+        implementation 'org.pac4j:pac4j-core:6.1.2'
+        implementation 'org.pac4j:pac4j-oidc:6.1.2'
+        implementation 'org.pac4j:pac4j-http:6.1.2'
+        implementation 'io.javalin:javalin:6.5.0'
+        implementation 'org.pac4j:javalin-pac4j:7.0.0'
         implementation 'org.javers:javers-core:6.14.0'
-        implementation 'com.nimbusds:nimbus-jose-jwt:9.37'
+        implementation 'com.nimbusds:nimbus-jose-jwt:9.40'
         implementation 'com.schibsted.spt.data:jslt:0.1.14'
+        implementation 'org.eclipse.rdf4j:rdf4j-rio-api:5.0.1'
+        implementation 'org.eclipse.rdf4j:rdf4j-rio-jsonld:5.0.1'
+        implementation 'org.eclipse.rdf4j:rdf4j-rio-turtle:5.0.1'
+        implementation 'org.eclipse.rdf4j:rdf4j-rio-n3:5.0.1'
+        implementation 'org.eclipse.rdf4j:rdf4j-rio-trig:5.0.1'
+        implementation 'org.eclipse.rdf4j:rdf4j-rio-rdfxml:5.0.1'
+        implementation 'org.eclipse.rdf4j:rdf4j-rio-ntriples:5.0.1'
+        implementation 'org.eclipse.rdf4j:rdf4j-rio-nquads:5.0.1'
+        implementation 'org.eclipse.rdf4j:rdf4j-shacl:5.0.1'
+        implementation 'org.eclipse.rdf4j:rdf4j-sail-nativerdf:5.0.1'
 
-        //also used outside test
-        implementation 'org.junit.jupiter:junit-jupiter:5.10.1'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
+        // also used outside test
+        implementation 'org.junit.jupiter:junit-jupiter:5.10.3'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.3'
         testImplementation 'org.mockito:mockito-core:5.6.0'
-        //allows to set environment variables in test
+        // allows to set environment variables in test
         testImplementation 'com.github.stefanbirkner:system-lambda:1.2.1'
+        // Allow generic test fixtures to be available everywhere
+        testImplementation testFixtures(project(':backend:molgenis-emx2'))
+
+        // test fixture dependencies
+        testFixturesImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
+        testFixturesImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.3'
+        testFixturesImplementation 'org.eclipse.rdf4j:rdf4j-rio-api:5.0.1'
+        testFixturesImplementation 'org.eclipse.rdf4j:rdf4j-rio-jsonld:5.0.1'
+        testFixturesImplementation 'org.eclipse.rdf4j:rdf4j-rio-turtle:5.0.1'
+        testFixturesImplementation 'org.eclipse.rdf4j:rdf4j-rio-n3:5.0.1'
+        testFixturesImplementation 'org.eclipse.rdf4j:rdf4j-rio-trig:5.0.1'
+        testFixturesImplementation 'org.eclipse.rdf4j:rdf4j-rio-rdfxml:5.0.1'
+        testFixturesImplementation 'org.eclipse.rdf4j:rdf4j-rio-ntriples:5.0.1'
+        testFixturesImplementation 'org.eclipse.rdf4j:rdf4j-rio-nquads:5.0.1'
+        testFixturesImplementation 'org.eclipse.rdf4j:rdf4j-shacl:5.0.1'
+        testFixturesImplementation 'org.apache.commons:commons-collections4:4.5.0'
     }
 
     jacoco {
-        toolVersion = "0.8.11"
+        toolVersion = "0.8.12"
     }
     jacocoTestReport {
         reports {
@@ -75,8 +103,8 @@ subprojects {
         }
     }
 
-    targetCompatibility = '17'
-    sourceCompatibility = '17'
+    targetCompatibility = rootProject.ext.javaVersion
+    sourceCompatibility = rootProject.ext.javaVersion
 
     jar {
         reproducibleFileOrder = true
@@ -92,7 +120,7 @@ subprojects {
     }
 
     test {
-        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED")
+        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED", "-XX:+EnableDynamicAgentLoading")
         useJUnitPlatform()
         testLogging {
             events "passed", "skipped", "failed" //, "standardOut", "standardError"
